==================== 2.24.0.1 ====================

2008-09-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-at-session.desktop.in.in: use a11y icon instead of searchtool
	(bug #550742)

2008-09-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-at-session.desktop.in.in: don't advertise startup-notify. The
	script doesn't support it (bug #550694)

2008-07-29  Rodrigo Moya <rodrigo@gnome-db.org>

	Patch from James Westby <jw+debian@jameswestby.net>
	
	* gnome-da-capplet.c (combo_conv_from_widget): don't return NULL, but
	the already set 'ret' variable, to allow Custom commands to work (bug
	#545280)

2008-07-24  Jens Granseuer  <jensgr@gmx.net>

	* gnome-default-applications.xml.in: use -x instead of -e as exec_flag
	for Terminator (bug #544058)

2008-07-15  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: install the default apps list in the default-apps
	subdirectory
	* gnome-da-xml.c: (gnome_da_xml_load_list): load everything from there
	* gnome-default-applications.pc.in: add file so that applications can
	query where to put their extensions

2008-07-15  Jens Granseuer  <jensgr@gmx.net>

	reviewed by: <delete if not using a buddy>

	* Makefile.am:
	* gnome-da-xml.c: (gnome_da_xml_load_list):
	* gnome-default-applications.pc.in:

2008-07-15  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Aprotim Sanyal <aprotim@google.com>

	* gnome-da-xml.c: (gnome_da_xml_load_list): make it possible for apps
	to install additional XML files to extend the list of available
	applications (bug #527304)

2008-06-15  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* icons/*:

	Provide a Tango style application icon for Preferred Applications
	capplet (bug 397312). Artwork by Jakub Steiner <jimmac@ximian.com>.

2008-05-18  Thomas Wood  <thos@gnome.org>

	* gnome-da-capplet.c: Convert to use GConfPropertyEditor and remove
	a lot of duplicated code in the process.

==================== 2.23.2 ====================

2008-04-16  Jens Granseuer  <jensgr@gmx.net>
