@@ -338,6 +338,15 @@
       <icon-name>totem</icon-name>
       <run-in-terminal>false</run-in-terminal>
     </media-player>
+    <media-player>
+      <_name>Listen</_name>
+      <executable>listen</executable>
+      <command>listen</command>
+      <icon-name>listen</icon-name>
+      <run-in-terminal>false</run-in-terminal>
+    </media-player>
+   </media-players>
+
   </media-players>
 
   <a11y-visual>
