@@ -1,3 +1,8 @@
+2008-10-09  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gnome-default-applications.xml.in: add Listen to the list of media
+	players. Patch by Julien Lavergne
+
 ==================== 2.24.0.1 ====================
 
 2008-09-03  Jens Granseuer  <jensgr@gmx.net>
